Tcard pokemon update

--- a/TCard-Pokemon/TCard-PokemonIllisible.html
+++ b/TCard-Pokemon/TCard-PokemonIllisible.html
@@ -1096,82 +1096,7 @@
       </div>
     </div>
 
-    <div id="tcardId-pokemon" class="tcard-pk-bg tc-civils evtc">
-      <div id="pkmonglets">
-        <div id="tabs2">
-          <!---<br />ONGLETS POKEMON--->
-          <label for="p1" class="poketab evtab" oncontextmenu="deletePokemon(event,this)">
-            <img class="tCard_Pokeball" src="https://www.pokebip.com/pages/icones/balls/bis.png" />
-          </label>
-        </div>
+<div id="tcardId-pokemon" class="tcard-pk-bg tc-civils evtc"><div id="pkmonglets" class="pkmonglets"><div id="tabs2" class="tabs2"><!---ONGLETS POKEMON---><label for="p1" class="poketab evtab" oncontextmenu="deletePokemon(event,this)"><img class="tCard_Pokeball" src="https://www.pokebip.com/pages/icones/balls/bis.png" /></label></div><input id="p1" type="radio" name="poketabs" checked /><span class="poketabcont"><div class="poke-container"><div class="pk-box"><div class="poke-header evsal"><!---MINI-SPRITE---><img class="tCard_MiniSprite" src="https://raw.githubusercontent.com/msikma/pokesprite/master/pokemon-gen7x/regular/empoleon.png"/><!---SURNOM PKM---><span class="tCard_Nom">Le P</span></div><div class="poke-infos"><div><span>Espèce</span><span>Obtention</span><span>Déclaré ?</span><span>talent</span></div><div><!---INFOS PKM---><span class="tCard_Espece">Pingoléon Artificiel</span><span class="tCard_Obtention">Impossible</span><span class="tCard_Declare">NON</span><span class="tCard_Talent">Est le P</span></div></div><!---TALENT---><div class="pktalent tCard_TalentDescription">Il n'y a plus grand talent qu'être le P.</div></div><div class="box2"><!---SHINY---><div class="poke-det tCard_Shiny"><!---TYPE---><div><img class="tCard_Type1" src="https://i.servimg.com/u/f40/18/51/38/10/eau10.png"/><img class="tCard_Type2" src="https://i.servimg.com/u/f40/18/51/38/10/acier10.png"/></div><!---SPRITE---><div><img class="tCard_Sprite" src="https://img.pokemondb.net/sprites/black-white/anim/normal/empoleon.gif"/><!---RANG---><span class="tCard_Rang">EX</span></div><div><img src="https://www.pokepedia.fr/images/2/28/Miniature_Chromatique_EB.png"/><!---GENRE---><span class="tCard_Genre">♂</span></div></div><div class="pk-att"><div class="att" oncontextmenu="deleteAttack(event,this)"><img src="https://i.servimg.com/u/f78/16/93/00/04/tenebr10.png"/><div>arrogance</div><div>lvl</div></div><div class="att" oncontextmenu="deleteAttack(event,this)"><img src="https://i.servimg.com/u/f78/16/93/00/04/normal11.png" /><div>Le-P</div><div>lvl</div></div></div></div></div><!---DESCRIPTION---><div class="poke-descr tCard_PokemonDescription">Le P a été cloné un nombre innombrable de fois mais il reste tout de même le P.</div><!---FIN POKEMON---></span></div></div>
 
-        <input id="p1" type="radio" name="poketabs" checked />
-        <span class="poketabcont">
-          <div class="poke-container">
-            <div class="pk-box">
-              <div class="poke-header evsal">
-                <!---MINI-SPRITE--->
-                <img class="tCard_MiniSprite" src="https://raw.githubusercontent.com/msikma/pokesprite/master/pokemon-gen7x/regular/empoleon.png"/>
-                <!---SURNOM PKM--->
-                <span class="tCard_Nom">Le P</span>
-              </div>
-              <div class="poke-infos">
-                <div>
-                  <span>Espèce</span>
-                  <span>Obtention</span>
-                  <span>Déclaré ?</span>
-                  <span>talent</span>
-                </div>
-                <div>
-                  <!---INFOS PKM--->
-                  <span class="tCard_Espece">Pingoléon Artificiel</span>
-                  <span class="tCard_Obtention">Impossible</span>
-                  <span class="tCard_Declare">NON</span>
-                  <span class="tCard_Talent">Est le P</span>
-                </div>
-              </div>
-              <!---TALENT--->
-              <div class="pktalent tCard_TalentDescription">Il n'y a plus grand talent qu'être le P.</div>
-            </div>
-            <div class="box2">
-              <!---SHINY--->
-              <div class="poke-det tCard_Shiny">
-                <!---TYPE--->
-                <div>
-                  <img class="tCard_Type1" src="https://i.servimg.com/u/f40/18/51/38/10/eau10.png"/>
-                  <img class="tCard_Type2" src="https://i.servimg.com/u/f40/18/51/38/10/acier10.png"/>
-                </div>
-                <!---SPRITE--->
-                <div>
-                  <img class="tCard_Sprite" src="https://img.pokemondb.net/sprites/black-white/anim/normal/empoleon.gif"/>
-                  <!---RANG--->
-                  <span class="tCard_Rang">EX</span>
-                </div>
-                <div>
-                  <img src="https://www.pokepedia.fr/images/2/28/Miniature_Chromatique_EB.png"/>
-                  <!---GENRE--->
-                  <span class="tCard_Genre">♂</span>
-                </div>
-              </div>
-              <div class="pk-att">
-                <div class="att" oncontextmenu="deleteAttack(event,this)">
-                  <img src="https://i.servimg.com/u/f78/16/93/00/04/tenebr10.png"/>
-                  <div>arrogance</div>
-                  <div>lvl</div>
-                </div>
-                <div class="att" oncontextmenu="deleteAttack(event,this)">
-                  <img src="https://i.servimg.com/u/f78/16/93/00/04/normal11.png" />
-                  <div>Le-P</div>
-                  <div>lvl</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!---DESCRIPTION--->
-          <div class="poke-descr tCard_PokemonDescription">Le P a été cloné un nombre innombrable de fois mais il reste tout de même le P.</div>
-          <!---FIN POKEMON--->
-        </span>
-      </div>
-    </div>
-  </div>
+</div>
 </body>
