Modification listeners + shiny

--- a/TCard-Pokemon/TCard-Pokemon.html
+++ b/TCard-Pokemon/TCard-Pokemon.html
@@ -1100,7 +1100,7 @@
       <div id="pkmonglets">
         <div id="tabs2">
           <!---<br />ONGLETS POKEMON--->
-          <label for="p1" class="poketab evtab" oncontextmenu="deletePokemon(event,this)">
+          <label for="p1" class="poketab evtab">
             <img class="tCard_Pokeball" src="https://www.pokebip.com/pages/icones/balls/bis.png" />
           </label>
         </div>
@@ -1154,12 +1154,12 @@
                 </div>
               </div>
               <div class="pk-att">
-                <div class="att" oncontextmenu="deleteAttack(event,this)">
+                <div class="att">
                   <img src="https://i.servimg.com/u/f78/16/93/00/04/tenebr10.png"/>
                   <div>arrogance</div>
                   <div>lvl</div>
                 </div>
-                <div class="att" oncontextmenu="deleteAttack(event,this)">
+                <div class="att">
                   <img src="https://i.servimg.com/u/f78/16/93/00/04/normal11.png" />
                   <div>Le-P</div>
                   <div>lvl</div>
